[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/UserInterface/IngameMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/art/ui/mago3.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0.960784, 0.913725, 0.74902, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.160784, 0.258824, 0.341176, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.666667, 0.392157, 0.301961, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.160784, 0.258824, 0.341176, 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.160784, 0.258824, 0.341176, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.666667, 0.392157, 0.301961, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.160784, 0.258824, 0.341176, 1 )

[node name="IngameMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.117647, 0.12549, 1 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 490.0
margin_top = 380.0
margin_right = 790.0
margin_bottom = 580.0
rect_min_size = Vector2( 300, 200 )
custom_constants/separation = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 15.0
margin_right = 300.0
margin_bottom = 66.0
custom_colors/font_color = Color( 0.960784, 0.913725, 0.74902, 1 )
custom_fonts/font = SubResource( 1 )
text = "PAUSE"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 300.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 20 )

[node name="ResumeButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_left = 60.0
margin_top = 98.0
margin_right = 240.0
margin_bottom = 138.0
rect_min_size = Vector2( 180, 40 )
size_flags_horizontal = 4
custom_colors/font_color_focus = Color( 0.960784, 0.913725, 0.74902, 1 )
custom_colors/font_color = Color( 0.960784, 0.913725, 0.74902, 1 )
custom_colors/font_color_hover = Color( 0.960784, 0.913725, 0.74902, 1 )
custom_colors/font_color_pressed = Color( 0.960784, 0.913725, 0.74902, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 4 )
text = "RESUME"

[node name="QuitButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_left = 60.0
margin_top = 144.0
margin_right = 240.0
margin_bottom = 184.0
rect_min_size = Vector2( 180, 40 )
size_flags_horizontal = 4
custom_colors/font_color_focus = Color( 0.960784, 0.913725, 0.74902, 1 )
custom_colors/font_color = Color( 0.960784, 0.913725, 0.74902, 1 )
custom_colors/font_color_hover = Color( 0.960784, 0.913725, 0.74902, 1 )
custom_colors/font_color_pressed = Color( 0.960784, 0.913725, 0.74902, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 9 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
text = "QUIT"

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
